# PedalRevolution

./: .gitignore  README.md  main.py  pyproject.toml  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/pedalrevolution/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/pedalrevolution/: DetectionApiService.kt  MainActivity.kt  VehicleCameraScreen.kt  VehicleDetection.kt  VehicleOverlay.kt  VehicleTracking.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/pedalrevolution/: ExampleUnitTest.kt
backend/: requirements.txt  server.py  setup.sh
docs/: benchmark_results.csv
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChartView.jsx  DashboardMap.jsx  DashboardMetrics.jsx  DetectionsTable.jsx
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: benchmark.py  compare_detections.py  generate_gt.py  run_all_benchmarks.py
