[project]
name = "pedalrevolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=2.1.5",
    "fastapi>=0.138.0",
    "matplotlib>=3.8.0",
    "mediapipe>=0.10.35",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "requests>=2.28.1",
    "tabulate>=0.9.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.66.5",
    "ultralytics>=8.4.75",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[[tool.uv.index]]
url = "https://pytorch.org/"
